Migrate build system from Ant to Gradle with OpenJFX plugin
Replaces hardcoded JavaFX SDK paths with Gradle dependency management.
Source files moved to Gradle conventions (src/main/java, src/main/resources).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>